# ai_financial_analyst

./: .gitignore  Documentation.md  README.md  mcp_server.py
.vibe/agents/: backend_coder.toml  backend_tester_agent.toml  builder_backend.toml  committer_agent.toml  planner_agent.toml  prd_converter.toml  prd_converter_agent.toml
.vibe/prompts/: backend_tester.md  builder_backend.md  committer.md  django_dev.md  planner.md  prd_converter.md  prd_converter_agent.md  testing.md
.vibe_workspace/projects/mistral_migration/: migration_plan.json  migration_plan.md  prd_mistral_migration.json  prd_mistral_migration.md
backend/: pyproject.toml  test_scribe.py  testing_call_transcript.txt
backend/financial_project/: asgi.py  settings.py  urls.py  wsgi.py
backend/investing/: admin.py  models.py  pusher_utils.py  serializers.py  services.py  urls.py  views.py
backend/investing/management/commands/: fix_filing_dates.py
backend/investing/migrations/: 0001_initial.py  0002_stock_transcript.py  0003_chatmessage_highlights.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
